deploy/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prod-mongo
  labels:
    app: mongo
    env: prod
spec:
  selector:
    matchLabels:
      app: mongo
      env: prod
  serviceName: prod-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
        env: prod
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongo
              mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo
      labels:
        app: mongo
        env: prod
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: prod-mongo
  labels:
    app: mongo
    env: prod
spec:
  selector:
    app: mongo
    env: prod
  ports:
    - port: 27017
      name: mongo
      targetPort: mongo
      protocol: TCP
