deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-api
  namespace: kscoutbot
  labels:
    app: bot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot-api
  template:
    metadata:
      labels:
        app: bot-api
    spec:
      containers:
        - name: bot-api
          image: kscout/bot-api:dev-latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: bot-api
  namespace: kscoutbot
  labels:
    app: bot-api
spec:
  type: ClusterIP
  selector:
    app: bot-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bot-api
  namespace: kscoutbot
  labels:
    app: bot-api
spec:
  host: bot.kscout.io
  path: /
  to:
    kind: Service
    name: bot-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
status:
  ingress:
    - host: bot.kscout.io
